--- a/index.html
+++ b/index.html
@@ -1,23 +1,107 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script type="text/javascript" src="./js/game-interface.js"></script>
-  <title>Ping Pong</title>
+  <script type="text/javascript" src="js/game-interface.js"></script>
+  <title>Memory Game</title>
 </head>
-<body>
-  <h1>Memory Game</h1>
+  <body>
+    <h1>Memory Game</h1>
+    <div class="container">
+      <table>
+        <tr>
+        <td>
+          <form>
+            <label id="pic1">pic 1</label>
+             <input class="card" type="hidden" name="card" value="1">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic2">pic 2</label>
+             <input class="card" type="hidden" name="card" value="2">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic3">pic 3</label>
+             <input class="card" type="hidden" name="card" value="3">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic4">pic 4</label>
+             <input class="card" type="hidden" name="card" value="4">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <form>
+            <label id="pic5">pic 5</label>
+             <input class="card" type="hidden" name="card" value="5">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic6">pic 6</label>
+             <input class="card" type="hidden" name="card" value="6">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic7">pic 7</label>
+             <input class="card" type="hidden" name="card" value="7">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic8">pic 8</label>
+             <input class="card" type="hidden" name="card" value="8">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <form>
+            <label id="pic9">pic 9</label>
+             <input class="card" type="hidden" name="card" value="9">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic10">pic 10</label>
+             <input class="card" type="hidden" name="card" value="10">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic11">pic 11</label>
+             <input class="card" type="hidden" name="card" value="11">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        <td>
+          <form>
+            <label id="pic12">pic 12</label>
+             <input class="card" type="hidden" name="card" value="12">
+             <button type="submit" class="button">stuff</button>
+          </form>
+        </td>
+        </table>
 
-<div class="">
 
-</div>
-
-
-  <form>
-     <input class="card" type="hidden" name="card" value="1">
-     <button type="submit"></button>
-  </form>
-<div class="out">
-</div>
-</body>
+      </div>
+  </body>
 </html>
